--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
       <h2>Gerência de Projetos</h2>
     </div>
     <div class="div-header-login">
-      <span><a href="/login"> Acessar<i class="fa-thin fa-circle-arrow-right"></i></a></span>
+      <span><a href="/cadastro"> Acessar</a></span>
     </div>
     
   </header>
