--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -2,7 +2,9 @@ body{
     margin: 0;
     font-family: monospace;
 }
-
+.hidden{
+    display:none;
+}
 header{
     background-color: blueviolet;
     padding: 20px;
@@ -31,8 +33,46 @@ header > h2{
     color: rgb(0, 0, 0);
     
 }
-
-
+.check-tipo-acesso1{
+    margin-left: 16px;
+}
+.check-tipo-acesso2{
+    margin-left: 8px;
+}
+.container-login{
+    margin-top: 60px;
+    border: solid black 2px;
+    padding: 2%;
+    border-radius: 8px;
+}
+.h2-registrar{
+    margin-top: 2px;
+    margin-bottom: 24px;
+    margin-left: 8px;
+}
+.div-button-andText{
+    display: flex;
+    align-items: inline;
+    justify-content: flex-start;
+}
+.div-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.div-text{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    margin-left: 16px;
+}
+.btn-submit-margin{
+    margin-left: 16px;
+    margin-top: 16px;
+}
+.div-loginNotCadastro{
+    margin-left: 8px;
+}
 .container{
     margin: auto;
     margin-top: 24px;
